Added example case
- Settings file updated, filters chosen to apply on the data of catalog_example.py.
- catalog_example.py updated for new code.

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,9 @@ Session.vim
 *.iml
 
 
+functions/MOCKSEDS_AGNfitter.py
+data/mockGalSED.dat
+data/mockGalSED.dat
+data/mockGalSED.dat
+example/SETTINGS_MockStellar.py
+example/SETTINGS_MockStellar.py
