--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -15,10 +15,10 @@ build:
     # golang: "1.20"
 
 # Build documentation in the "docs/" directory with Sphinx
-sphinx:
-  configuration: docs/conf.py
+#sphinx:
+#  configuration: docs/conf.py
   # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
-  # builder: "dirhtml"
+builder: "dirhtml"
   # Fail on all warnings to avoid broken references
   # fail_on_warning: true
 
@@ -30,6 +30,6 @@ sphinx:
 # Optional but recommended, declare the Python requirements required
 # to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-python:
-   install:
-     - requirements: docs/requirements.txt
+#python:
+#   install:
+#     - requirements: docs/requirements.txt
